--- a/client/src/components/styles/landing.css
+++ b/client/src/components/styles/landing.css
@@ -5,7 +5,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  background-color: #e5e5e5;
+  background-color: #f2f2f2;
 }
 
 br {
@@ -47,13 +47,13 @@ a:hover {
 .bold {
   font-size: 20px;
   font-weight: 500;
-  margin-top: 11%;
+  margin: 0;
 }
 
 .thin {
   font-size: 20px;
   font-weight: 100;
-  margin-top: 9%;
+  margin: 0;
 }
 
 .logo {
@@ -85,6 +85,10 @@ a:hover {
   align-items: center;
 }
 
+.hrefs p {
+  opacity: 0.8;
+}
+
 .btn-block {
   margin-right: 5%;
   padding: 12px 46px;
@@ -109,7 +113,7 @@ a:hover {
 .default-button:hover {
   background-color: #6672e0;
   box-shadow: 0px 15px 20px rgba(26, 61, 175, 0.274);
-  color: #e5e5e5;
+  color: #f2f2f2;
   transform: translateY(-7px);
 }
 
@@ -386,12 +390,8 @@ a:hover {
   height: 44px;
   width: 44px;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  align-items: center;
+
   background-color: #e37a7a;
-  position: relative;
   box-shadow: 0px 7px 9px rgba(255, 36, 120, 0.12);
 }
 
@@ -472,43 +472,6 @@ a:hover {
 
 .blue-button:hover {
   background-color: #0088cc;
-}
-
-.team {
-  width: 100%;
-  height: 100%;
-  margin-top: 35%;
-}
-
-.team-row {
-  display: flex;
-  flex-direction: row;
-  margin-left: 5%;
-}
-
-.img-team-row {
-  display: flex;
-  flex-direction: row;
-  margin-right: 20%;
-}
-
-.img-team-row h2 {
-  font-family: "Rany";
-  font-size: 18px;
-  font-weight: 500;
-  margin-left: 20px;
-}
-
-.team-text {
-  width: 170px;
-}
-
-.img-team-row h3 {
-  font-family: "Rany";
-  font-size: 16px;
-  margin-left: 20px;
-  font-weight: 300;
-  opacity: 0.9;
 }
 
 #footer {
