--- a/client/src/components/styles/landing.css
+++ b/client/src/components/styles/landing.css
@@ -94,6 +94,10 @@ a:hover {
   opacity: 0.8;
 }
 
+.hrefs p:hover {
+  cursor: pointer;
+}
+
 .btn-block {
   margin-right: 5%;
   padding: 12px 46px;
@@ -182,7 +186,7 @@ a:hover {
 .heading {
   width: 100%;
   height: 50%;
-  margin: 5rem 0 20px 5%;
+  margin: 5rem 0 2rem 3rem;
   font-size: 40px;
   font-family: "Rany";
   font-style: normal;
